rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_semicolon_call.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_semicolon_call), \"called(me)\")"
snapshot_kind: text
---
error: Missing semicolon: called(me);
  ┌─ missing_semicolon_call:1:1
  │
1 │ called(me)
  │ ^ Missing semicolon: called(me);
